--- a/src/pages/Employeedetails.css
+++ b/src/pages/Employeedetails.css
@@ -6,7 +6,8 @@
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     
-    font-family: monospace ;
+    /* font-family: monospace ; */
+    font-family:  Consolas, monaco, monospace;
   }
   
   h2 {
